# gssolver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.toml  pyproject.toml  result.csv  result.nc
include/: base.hpp  dataio.hpp
src/: base.cpp  dataio.cpp  solver.cpp
tools/: convert.py  magnetic_field_plot.py  plot.py  plot2.py
