[project]
name = "gssolver"
version = "0.1.0"
description = "Solver for Grad-Shafranov equation"
authors = [
    {name = "alsciaukat",email = "alsciokat@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "netcdf4 (>=1.7.3,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[dependency-groups]
dev = [
    "poetry (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
